--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.11.0",
     "method-override": "^2.3.5",
     "moment": "^2.10.6",
+    "mongoose": "^4.3.4",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   },
